[package]
authors = ["Saverio Miroddi <saverio.pub2@gmail.com>"]
edition = "2018"
name = "boing"
version = "0.1.0"

[dependencies]
fastrand = "1.4.1"
ggez = {git = "https://github.com/ggez/ggez", rev = "63e246d68bb400509134f217bc565fcd17df31e8"}# 0.6.0-rc1 (no tag)
glam = {version = "0.15.2", features = ["mint"]}
