[package]
authors = ["Herbert Wolverson <herberticus@gmail.com>", "Saverio Miroddi <saverio.pub2@gmail.com>"]
edition = "2021"
name = "rusty_roguelike-bevy"
version = "0.1.0"

[dependencies]
bevy = {version = "0.7.0", default-features = false, features = ["dynamic"]}
bracket-lib = "~0.8.1"
iyes_loopless = "0.5.1"
ron = "0.6.1"
serde = "1.0.115"
