[package]
name = "rusty-dungeon"
version = "0.5.0"
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2021"

[dependencies]
macroquad = "0.3.3"
legion = { version = "=0.3.1", default-features = false, features = ["codegen"] }
getrandom = { version = "0.2", features = ["js"] }
bracket-pathfinding = "0.8.4"
nanoserde = "0.1.26"
lazy_static = "1.4.0"

# Doesn't work with android build
[profile.dev.package.'*']
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1

[package.metadata.scripts]
build-web = "bin/build-web"
serve-web = "bin/serve-web"

