[package]
edition = "2021"
name = "soccer-fyrox"
version = "0.1.0"

[dependencies]

fyrox = "0.26.0" 
rand = "*" # Use the same as Fyrox

# Fixes window resizing (see https://github.com/rust-windowing/winit/issues/2306).
#
[patch.crates-io]
winit = {git = "https://github.com/rust-windowing/winit.git", rev = "5d85c10a2ccdb5254fc0143247f95cc8e5847c03"}
